--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "name": "withbhanu",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js"
-
   },
   "keywords": [],
   "author": "",
@@ -19,5 +17,7 @@
     "express-session": "^1.18.0",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.0"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
